fix: reduce article info font size on mobile phones

--- a/css/article.css
+++ b/css/article.css
@@ -36,3 +36,9 @@ article section, #article-info {
   margin: 0;
   font-size: var(--fontSizeHuge);
 }
+
+@media (max-width: 480px) {
+  #article-info {
+    font-size: var(--fontSizeSmall);
+  }
+}
